Fix answering section on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -962,7 +962,6 @@ header {
   }
   .answeringSection {
     display: flex;
-    justify-content: center;
     align-items: center;
     margin-bottom: 0;
   }
